# project-euler-boilerplate

./: .gitignore  README.md
ggb/: readme.txt
haskell/: README.md  package.yaml  project-euler-boilerplate.cabal
haskell/app/: Main.hs
haskell/src/: Euler.hs
haskell/src/Main/: Generate.hs  Options.hs  Run.hs  Simulate.hs  Tests.hs
haskell/src/Main/Run/: Eulers.hs
haskell/src/Simulations/: readme.txt
haskell/src/Solutions/: Euler001.hs
haskell/src/Utils/: Array.hs  Function.hs  Input.hs  List.hs  Matrix.hs  Memo.hs  Monad.hs  NumberTheory.hs  Numeric.hs  Operators.hs  Queue.hs
haskell/test/Utils/: FunctionSpec.hs  ListSpec.hs  MatrixSpec.hs  NumberTheorySpec.hs  NumericSpec.hs  QueueSpec.hs
in/: readme.txt
rust/: Cargo.toml  README.md
rust/macros/: Cargo.toml
rust/macros/src/: lib.rs
rust/src/: main.rs
rust/src/solutions/: euler001.rs
rust/src/utils/: input.rs  itertools.rs
rust/src/utils/collections/: find_union.rs
rust/src/utils/number_theory/: invert_mod.rs  radical.rs  totient.rs
rust/src/utils/numeric/: binsearch.rs  digits.rs  divisors.rs  factorial.rs
rust/src/utils/numeric/sequences/: fibonacci.rs  heptagonal.rs  hexagonal.rs  octogonal.rs  pentagonal.rs  square.rs  triangular.rs
rust/src/utils/numeric/sequences/continued_fractions/: approximations.rs  e.rs  square_root.rs
tex/: readme.txt
txt/: readme.txt
