[package]
name = "project-euler-rust"
version = "0.1.0"
authors = ["a-wiacek <33523701+a-wiacek@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [profile.dev]
# opt-level = 3

# [profile.test]
# opt-level = 3

[dependencies]
project-euler-rust-macros = { path = "macros" }

cached = "0.13.1"
itertools = "0.9.0"
num = "0.2.1"
ordered-float = "1.0.2"
permutohedron = "0.2.4"
primal = "0.2.3"
rand = "0.7.3"
